@startuml

class HTTPServer{
    {static} + String INCONNU
    {static} + String INTERDIT
    {static} + String RESSOURCE_NON_TROUVEE
    {static} + String AUTORISE
    - int : port
    - ArrayList<String> : resAutorises
    - ArrayList<String> : resInterdits
    - String : root
    - String : accessLog
    - String : errorLog
    - boolean : nonRestreint
    + HTTPServer(String cheminConfig)
    {static} - avoirTypeDonnees(String cheminFichier) : String
    - ecrireDansFichTxt(String line, String cheminFichDest)
    + getMemoireThread() : long
    + log(String ipClient, String requete, String reponse, String fichierlog, String date, String eltRetourne)
    + enregistrerPoidsSources()
    {static} + genererGraphiquePieChart(long memoireTotale, logn memoirePartielle, String cheminImageSortie)
    + genererStatusServeurHTML(String chemin)
    + executerCode(String interpreteur, String code) : String
}

class Memoire{
  {static} + afficherMemoireRAMMachine() : long
  {static} + afficherMemoireDDMachine() : long
  {static} + afficherNbProcessus() : int
  {static} + castBytesForHumanReadable(long bytes) : String
}

class XML{
  {static} parseXMLLine(String line) : String[]
}


class ComparateurIP{
  + estInclue(InetAddress address, ArrayList<String> l) : boolean
}

ComparateurIP "2" <-- "1" HTTPServer
XML <-- "utilise méthode" HTTPServer
Memoire <-- "utilise méthodes" HTTPServer
@enduml